manifests/aboutme.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aboutme
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    gethomepage.dev/name: About me
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Deployments
    gethomepage.dev/icon: nginx.png
    gethomepage.dev/pod-selector: app=aboutme
spec:
  ingressClassName: traefik
  rules:
    - host: aboutme.cloud.nejlikka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aboutme
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: aboutme
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: aboutme

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aboutme
spec:
  selector:
    matchLabels:
      app: aboutme
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: aboutme
    spec:
      containers:
        - name: aboutme
          image: pontusc/aboutme:1761123633
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "64Mi"
              cpu: "0.1"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 20
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 20
